--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <!-- 可选的Bootstrap主题文件（一般不用引入） -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap-theme.min.css">
 
+    <link rel="stylesheet" href="assets/css/style.css">
+
     <!-- jQuery文件。务必在bootstrap.min.js 之前引入 -->
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
 
