--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
     <script type="text/javascript" src="app/constant.js"></script>
     <script type="text/javascript" src="app/controller.js"></script>
     <script type="text/javascript" src="app/router.js"></script>
-    <script type="text/javascript" src="app/service.js"></script>
+    <!-- <script type="text/javascript" src="app/service.js"></script> -->
+    <script type="text/javascript" src="mock/service.js"></script>
   </head>
 
   <body>
