--- a/assets/tpl/wfop.html
+++ b/assets/tpl/wfop.html
@@ -12,25 +12,25 @@
 	</div>
 	<span>流程大类</span>
 	<div class="dropdown inline">
-		<button class="btn btn-default dropdown-toggle" type="button" id="workFlowBCategoryDropDown" data-toggle="dropdown">
-			{{currentWorkFlowBCategoryDisplay}}
+		<button class="btn btn-default dropdown-toggle" type="button" id="workFlowbCategoryDropDown" data-toggle="dropdown">
+			{{currentWorkFlowbCategoryDisplay}}
 			<span class="caret"></span>
 		</button>
-		<ul class="dropdown-menu" role="menu" aria-labelledby="workFlowBCategoryDropDown">
-			<li role="presentation" ng-repeat="item in workFlowBCategoryArray track by $index"><a role="menuitem" tabindex="{{$index}}" ng-click="workFlowBCategoryChecked($index)">{{item}}</a></li>
+		<ul class="dropdown-menu" role="menu" aria-labelledby="workFlowbCategoryDropDown">
+			<li role="presentation" ng-repeat="item in workFlowbCategoryArray track by $index"><a role="menuitem" tabindex="{{$index}}" ng-click="workFlowbCategoryChecked($index)">{{item}}</a></li>
 		</ul>
 	</div>
 	<span>流程小类</span>
 	<div class="dropdown inline">
-		<button class="btn btn-default dropdown-toggle" type="button" id="workFlowLCategoryDropDown" data-toggle="dropdown">
-			{{currentWorkFlowLCategoryDisplay}}
+		<button class="btn btn-default dropdown-toggle" type="button" id="workFlowlCategoryDropDown" data-toggle="dropdown">
+			{{currentWorkFlowlCategoryDisplay}}
 			<span class="caret"></span>
 		</button>
-		<ul class="dropdown-menu" role="menu" aria-labelledby="workFlowLCategoryDropDown">
-			<li role="presentation" ng-repeat="item in workFlowLCategoryArray track by $index"><a role="menuitem" tabindex="{{$index}}" ng-click="workFlowLCategoryChecked($index)">{{item}}</a></li>
+		<ul class="dropdown-menu" role="menu" aria-labelledby="workFlowlCategoryDropDown">
+			<li role="presentation" ng-repeat="item in workFlowlCategoryArray track by $index"><a role="menuitem" tabindex="{{$index}}" ng-click="workFlowlCategoryChecked($index)">{{item}}</a></li>
 		</ul>
 	</div>
-	<button class="btn btn-default" type="button" ng-click="search(currentWorkFlowNameDisplay, currentWorkFlowBCategoryDisplay, currentWorkFlowLCategoryDisplay)">搜索</button>
+	<button class="btn btn-default" type="button" ng-click="search(currentWorkFlowNameDisplay, currentWorkFlowbCategoryDisplay, currentWorkFlowlCategoryDisplay)">搜索</button>
 	<button class="btn btn-default" type="button" ng-click="reset()">重置</button>
 	<button class="btn btn-default" type="button" ng-click="export()">导出</button>
 </div>
@@ -66,10 +66,10 @@
             <input ng-change="edited($index)" type="input" ng-model="item.workFlowName" ng-disable="!item.editer" style="border: 0;text-align: left;">
         </td>
         <td ng-click="switch($index)">
-            <input ng-change="edited($index)" type="input" ng-model="item.BCategory" ng-disable="!item.editer" style="border: 0;text-align: left;">
+            <input ng-change="edited($index)" type="input" ng-model="item.bCategory" ng-disable="!item.editer" style="border: 0;text-align: left;">
         </td>
         <td ng-click="switch($index)">
-            <input ng-change="edited($index)" type="input" ng-model="item.LCategory" ng-disable="!item.editer" style="border: 0;width:100%text-align: left;">
+            <input ng-change="edited($index)" type="input" ng-model="item.lCategory" ng-disable="!item.editer" style="border: 0;width:100%text-align: left;">
         </td>
       </tr>
     </tbody>
