--- a/assets/tpl/authorize.html
+++ b/assets/tpl/authorize.html
@@ -54,11 +54,80 @@
             </a>
         </h4>
     </div>
-    <div id="collapseOne" class="panel-collapse collapse in">
-        <div class="panel-body">
-            Nihil anim keffiyeh helvetica, craft beer labore wes anderson 
-            cred nesciunt sapiente ea proident. Ad vegan excepteur butcher 
-            vice lomo.
-        </div>
+    <div id="collapseOne" class="panel-collapse collapse">
+        <table class="table table-list-wfop">
+            <thead >
+                <tr>
+                    <td>序号</td>
+                    <td>全选</td>
+                    <td>流程名</td>
+                    <td>流程大类</td>
+                    <td>流程小类</td>
+                </tr>
+                 <tr>
+                    <td>序号</td>
+                    <td>全选</td>
+                    <td>流程名</td>
+                    <td>流程大类</td>
+                    <td>流程小类</td>
+                </tr>
+                 <tr>
+                    <td>序号</td>
+                    <td>全选</td>
+                    <td>流程名</td>
+                    <td>流程大类</td>
+                    <td>流程小类</td>
+                </tr>
+                 <tr>
+                    <td>序号</td>
+                    <td>全选</td>
+                    <td>流程名</td>
+                    <td>流程大类</td>
+                    <td>流程小类</td>
+                </tr>
+            </thead>
+        </table>
+    </div>
+    <div class="panel-heading">
+        <h4 class="panel-title">
+            <a data-toggle="collapse" data-parent="#accordion" 
+               href="#collapseOne1">
+                点击我进行展开，再次点击我进行折叠。第 1 部分
+            </a>
+        </h4>
+    </div>
+    <div id="collapseOne1" class="panel-collapse collapse">
+        <table class="table table-list-wfop">
+            <thead >
+                <tr>
+                    <td>序号</td>
+                    <td>全选</td>
+                    <td>流程名</td>
+                    <td>流程大类</td>
+                    <td>流程小类</td>
+                </tr>
+                 <tr>
+                    <td>序号</td>
+                    <td>全选</td>
+                    <td>流程名</td>
+                    <td>流程大类</td>
+                    <td>流程小类</td>
+                </tr>
+                 <tr>
+                    <td>序号</td>
+                    <td>全选</td>
+                    <td>流程名</td>
+                    <td>流程大类</td>
+                    <td>流程小类</td>
+                </tr>
+                 <tr>
+                    <td>序号</td>
+                    <td>全选</td>
+                    <td>流程名</td>
+                    <td>流程大类</td>
+                    <td>流程小类</td>
+                </tr>
+            </thead>
+        </table>
     </div>
 </div>
