--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
     <script type="text/javascript" src="../app/router.js"></script>
     <script type="text/javascript" src="../app/service.js"></script>
     <!-- <script type="text/javascript" src="mock/service.js"></script> -->
+    <script>
+        var userName = "zhanglei18";
+        var role = 3;
+    </script>
   </head>
 
   <body>
